@@ -1,12 +1,12 @@
-/**
- *  Copyright (C) 2018 Ryszard Wiśniewski <brut.alll@gmail.com>
- *  Copyright (C) 2018 Connor Tumbleson <connor.tumbleson@gmail.com>
+/*
+ *  Copyright (C) 2010 Ryszard Wiśniewski <brut.alll@gmail.com>
+ *  Copyright (C) 2010 Connor Tumbleson <connor.tumbleson@gmail.com>
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
  *  You may obtain a copy of the License at
  *
- *       http://www.apache.org/licenses/LICENSE-2.0
+ *       https://www.apache.org/licenses/LICENSE-2.0
  *
  *  Unless required by applicable law or agreed to in writing, software
  *  distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,55 +16,45 @@
  */
 package brut.androlib.aapt1;
 
-import brut.androlib.Androlib;
+import brut.androlib.ApkBuilder;
 import brut.androlib.ApkDecoder;
 import brut.androlib.BaseTest;
 import brut.androlib.TestUtils;
-import brut.androlib.meta.MetaInfo;
-import brut.directory.ExtFile;
+import brut.androlib.apk.ApkInfo;
 import brut.common.BrutException;
-import brut.util.OS;
-
-import java.awt.image.BufferedImage;
-import java.io.*;
-import java.util.Map;
-
+import brut.directory.ExtFile;
 import brut.util.OSDetection;
-import org.junit.*;
-
-import static org.junit.Assert.*;
-import static org.junit.Assume.*;
+import org.w3c.dom.Document;
 
 import javax.imageio.ImageIO;
+import java.awt.image.BufferedImage;
+import java.io.File;
+import java.io.IOException;
+import java.util.HashMap;
+import java.util.Map;
 
-/**
- * @author Ryszard Wiśniewski <brut.alll@gmail.com>
- */
+import org.junit.*;
+import static org.junit.Assert.*;
+import static org.junit.Assume.assumeTrue;
+
 public class BuildAndDecodeTest extends BaseTest {
 
     @BeforeClass
     public static void beforeClass() throws Exception {
-        TestUtils.cleanFrameworkFile();
-
-        sTmpDir = new ExtFile(OS.createTempDirectory());
         sTestOrigDir = new ExtFile(sTmpDir, "testapp-orig");
         sTestNewDir = new ExtFile(sTmpDir, "testapp-new");
+
         LOGGER.info("Unpacking testapp...");
-        TestUtils.copyResourceDir(BuildAndDecodeTest.class, "aapt1/testapp/", sTestOrigDir);
+        TestUtils.copyResourceDir(BuildAndDecodeTest.class, "aapt1/testapp", sTestOrigDir);
+
+        sConfig.setAaptVersion(1);
 
         LOGGER.info("Building testapp.apk...");
-        File testApk = new File(sTmpDir, "testapp.apk");
-        new Androlib().build(sTestOrigDir, testApk);
+        ExtFile testApk = new ExtFile(sTmpDir, "testapp.apk");
+        new ApkBuilder(sTestOrigDir, sConfig).build(testApk);
 
         LOGGER.info("Decoding testapp.apk...");
-        ApkDecoder apkDecoder = new ApkDecoder(testApk);
-        apkDecoder.setOutDir(sTestNewDir);
-        apkDecoder.decode();
-    }
-
-    @AfterClass
-    public static void afterClass() throws BrutException {
-        OS.rmdir(sTmpDir);
+        new ApkDecoder(testApk, sConfig).decode(sTestNewDir);
     }
 
     @Test
@@ -144,6 +134,11 @@ public class BuildAndDecodeTest extends BaseTest {
     }
 
     @Test
+    public void miuiRegressionTest() throws BrutException {
+        compareValuesFiles("values-godzillaui/strings.xml");
+    }
+
+    @Test
     public void valuesStringsTest() throws BrutException {
         compareValuesFiles("values-mcc001/strings.xml");
     }
@@ -165,20 +160,22 @@ public class BuildAndDecodeTest extends BaseTest {
 
     @Test
     public void valuesExtraLongExactLengthTest() throws BrutException {
-        Map<String, String> strs = TestUtils.parseStringsXml(new File(sTestNewDir, "res/values-en/strings.xml"));
+        Document doc = loadDocument(new File(sTestNewDir, "res/values-en/strings.xml"));
 
         // long_string6 should be exactly 0x8888 chars of "a"
         // the valuesExtraLongTest() should handle this
         // but such an edge case, want a specific test
-        String aaaa = strs.get("long_string6");
-        assertEquals(0x8888, aaaa.length());
+        String expression = "/resources/string[@name='long_string6']/text()";
+        String str = evaluateXPath(doc, expression, String.class);
+        assertEquals(0x8888, str.length());
     }
 
     @Test
-    public void storedMp3FilesAreNotCompressedTest() throws BrutException {
-        ExtFile extFile = new ExtFile(sTmpDir, "testapp.apk");
-        Integer built = extFile.getDirectory().getCompressionLevel("res/raw/rain.mp3");
-        assertEquals(new Integer(0), built);
+    public void storedMp3FilesAreNotCompressedTest() throws BrutException, IOException {
+        try (ExtFile testApk = new ExtFile(sTmpDir, "testapp.apk")) {
+            Integer compLevel = testApk.getDirectory().getCompressionLevel("res/raw/rain.mp3");
+            assertEquals(Integer.valueOf(0), compLevel);
+        }
     }
 
     @Test
@@ -196,6 +193,21 @@ public class BuildAndDecodeTest extends BaseTest {
     @Test
     public void xmlReferencesTest() throws BrutException {
         compareXmlFiles("res/xml/references.xml");
+    }
+
+    @Test
+    public void xmlAccessibilityTest() throws BrutException {
+        compareXmlFiles("res/xml/accessibility_service_config.xml");
+    }
+
+    @Test
+    public void xmlXsdFileTest() throws BrutException {
+        compareXmlFiles("res/xml/ww_box_styles_schema.xsd");
+    }
+
+    @Test
+    public void xmlIdsEmptyTest() throws BrutException {
+        compareXmlFiles("res/values/ids.xml");
     }
 
     @Test
@@ -231,7 +243,7 @@ public class BuildAndDecodeTest extends BaseTest {
     @Test
     public void qualifiersTest() throws BrutException {
         compareValuesFiles("values-mcc004-mnc4-en-rUS-ldrtl-sw100dp-w200dp-h300dp"
-                + "-xlarge-long-round-highdr-land-desk-night-xhdpi-finger-keyssoft-12key"
+                + "-long-round-highdr-land-desk-night-xhdpi-finger-keyssoft-12key"
                 + "-navhidden-dpad-v26/strings.xml");
     }
 
@@ -287,7 +299,7 @@ public class BuildAndDecodeTest extends BaseTest {
 
     @Test
     public void twoLetterNotHandledAsBcpTest() {
-        checkFolderExists("res/values-fr");
+        assertTrue(new File(sTestNewDir, "res/values-fr").isDirectory());
     }
 
     @Test
@@ -331,60 +343,59 @@ public class BuildAndDecodeTest extends BaseTest {
 
     @Test
     public void fontTest() throws BrutException {
-        File fontXml = new File((sTestNewDir + "/res/font"), "lobster.xml");
-        File fontFile = new File((sTestNewDir + "/res/font"), "lobster_regular.otf");
+        File fontXml = new File(sTestNewDir, "res/font/lobster.xml");
+        File fontFile = new File(sTestNewDir, "res/font/lobster_regular.otf");
 
         // Per #1662, ensure font file is not encoded.
         assertTrue(fontXml.isFile());
         compareXmlFiles("/res/font/lobster.xml");
 
         // If we properly skipped decoding the font (otf) file, this file should not exist
-        assertFalse((new File((sTestNewDir + "/res/values"), "fonts.xml")).isFile());
+        assertFalse(new File(sTestNewDir, "res/values/fonts.xml").isFile());
         assertTrue(fontFile.isFile());
     }
 
     @Test
-    public void drawableNoDpiTest() throws BrutException, IOException {
-        compareResFolder("drawable-nodpi");
+    public void drawableNoDpiTest() throws BrutException {
+        compareBinaryFolder("res/drawable-nodpi");
     }
 
     @Test
-    public void drawableAnyDpiTest() throws BrutException, IOException {
-        compareResFolder("drawable-anydpi");
+    public void drawableAnyDpiTest() throws BrutException {
+        compareBinaryFolder("res/drawable-anydpi");
     }
 
     @Test
-    public void drawableNumberedDpiTest() throws BrutException, IOException {
-        compareResFolder("drawable-534dpi");
+    public void drawableNumberedDpiTest() throws BrutException {
+        compareBinaryFolder("res/drawable-534dpi");
     }
 
     @Test
-    public void drawableLdpiTest() throws BrutException, IOException {
-        compareResFolder("drawable-ldpi");
+    public void drawableLdpiTest() throws BrutException {
+        compareBinaryFolder("res/drawable-ldpi");
     }
 
     @Test
-    public void drawableMdpiTest() throws BrutException, IOException {
-        compareResFolder("drawable-mdpi");
+    public void drawableMdpiTest() throws BrutException {
+        compareBinaryFolder("res/drawable-mdpi");
     }
 
     @Test
-    public void drawableTvdpiTest() throws BrutException, IOException {
-        compareResFolder("drawable-tvdpi");
+    public void drawableTvdpiTest() throws BrutException {
+        compareBinaryFolder("res/drawable-tvdpi");
     }
 
     @Test
-    public void drawableXhdpiTest() throws BrutException, IOException {
-        compareResFolder("drawable-xhdpi");
+    public void drawableXhdpiTest() throws BrutException {
+        compareBinaryFolder("res/drawable-xhdpi");
     }
 
     @Test
     public void ninePatchImageColorTest() throws IOException {
-        char slash = File.separatorChar;
-        String location = slash + "res" + slash + "drawable-xhdpi" + slash;
+        String fileName = "res/drawable-xhdpi/9patch.9.png";
 
-        File control = new File((sTestOrigDir + location), "9patch.9.png");
-        File test =  new File((sTestNewDir + location), "9patch.9.png");
+        File control = new File(sTestOrigDir, fileName);
+        File test = new File(sTestNewDir, fileName);
 
         BufferedImage controlImage = ImageIO.read(control);
         BufferedImage testImage = ImageIO.read(test);
@@ -401,11 +412,10 @@ public class BuildAndDecodeTest extends BaseTest {
 
     @Test
     public void issue1508Test() throws IOException {
-        char slash = File.separatorChar;
-        String location = slash + "res" + slash + "drawable-xhdpi" + slash;
+        String fileName = "res/drawable-xhdpi/btn_zoom_up_normal.9.png";
 
-        File control = new File((sTestOrigDir + location), "btn_zoom_up_normal.9.png");
-        File test = new File((sTestNewDir + location), "btn_zoom_up_normal.9.png");
+        File control = new File(sTestOrigDir, fileName);
+        File test = new File(sTestNewDir, fileName);
 
         BufferedImage controlImage = ImageIO.read(control);
         BufferedImage testImage = ImageIO.read(test);
@@ -422,21 +432,20 @@ public class BuildAndDecodeTest extends BaseTest {
 
     @Test
     public void issue1511Test() throws IOException {
-        char slash = File.separatorChar;
-        String location = slash + "res" + slash + "drawable-xxhdpi" + slash;
+        String fileName = "res/drawable-xxhdpi/textfield_activated_holo_dark.9.png";
 
-        File control = new File((sTestOrigDir + location), "textfield_activated_holo_dark.9.png");
-        File test = new File((sTestNewDir + location), "textfield_activated_holo_dark.9.png");
+        File control = new File(sTestOrigDir, fileName);
+        File test = new File(sTestNewDir, fileName);
 
         BufferedImage controlImage = ImageIO.read(control);
         BufferedImage testImage = ImageIO.read(test);
 
         // Check entire image as we cannot mess this up
-        final int w = controlImage.getWidth(),
-                  h = controlImage.getHeight();
+        int w = controlImage.getWidth();
+        int h = controlImage.getHeight();
 
-        final int[] controlImageGrid = controlImage.getRGB(0, 0, w, h, null, 0, w);
-        final int[] testImageGrid = testImage.getRGB(0, 0, w, h, null, 0, w);
+        int[] controlImageGrid = controlImage.getRGB(0, 0, w, h, null, 0, w);
+        int[] testImageGrid = testImage.getRGB(0, 0, w, h, null, 0, w);
 
         for (int i = 0; i < controlImageGrid.length; i++) {
             assertEquals("Image lost Optical Bounds at i = " + i, controlImageGrid[i], testImageGrid[i]);
@@ -445,20 +454,25 @@ public class BuildAndDecodeTest extends BaseTest {
 
     @Test
     public void robust9patchTest() throws IOException {
-        String[] ninePatches = {"ic_notification_overlay.9.png", "status_background.9.png",
-                "search_bg_transparent.9.png", "screenshot_panel.9.png", "recents_lower_gradient.9.png"};
-
-        char slash = File.separatorChar;
-        String location = slash + "res" + slash + "drawable-xxhdpi" + slash;
+        String[] ninePatches = {
+                "ic_notification_overlay.9.png",
+                "status_background.9.png",
+                "search_bg_transparent.9.png",
+                "screenshot_panel.9.png",
+                "recents_lower_gradient.9.png",
+        };
 
         for (String ninePatch : ninePatches) {
-            File control = new File((sTestOrigDir + location), ninePatch);
-            File test = new File((sTestNewDir + location), ninePatch);
+            String fileName = "res/drawable-xxhdpi/" + ninePatch;
+
+            File control = new File(sTestOrigDir, fileName);
+            File test = new File(sTestNewDir, fileName);
 
             BufferedImage controlImage = ImageIO.read(control);
             BufferedImage testImage = ImageIO.read(test);
 
-            int w = controlImage.getWidth(), h = controlImage.getHeight();
+            int w = controlImage.getWidth();
+            int h = controlImage.getHeight();
 
             // Check the entire horizontal line
             for (int i = 1; i < w; i++) {
@@ -482,69 +496,74 @@ public class BuildAndDecodeTest extends BaseTest {
         }
     }
 
-    @Test
-    public void confirmZeroByteFileIsNotStored() throws BrutException {
-        MetaInfo metaInfo = new Androlib().readMetaFile(sTestNewDir);
-
-        for (String item : metaInfo.doNotCompress) {
-            assertNotSame(item, "empty");
-        }
+    private static boolean isTransparent(int pixel) {
+        return pixel >> 24 == 0x00;
     }
 
     @Test
-    public void drawableXxhdpiTest() throws BrutException, IOException {
-        compareResFolder("drawable-xxhdpi");
+    public void confirmZeroByteFileExtensionIsNotStored() throws BrutException {
+        ApkInfo testInfo = ApkInfo.load(sTestNewDir);
+        assertFalse(testInfo.doNotCompress.contains("jpg"));
     }
 
     @Test
-    public void drawableQualifierXxhdpiTest() throws BrutException, IOException {
-        compareResFolder("drawable-xxhdpi-v4");
+    public void confirmZeroByteFileIsStored() throws BrutException {
+        ApkInfo testInfo = ApkInfo.load(sTestNewDir);
+        assertTrue(testInfo.doNotCompress.contains("assets/0byte_file.jpg"));
     }
 
     @Test
-    public void drawableXxxhdpiTest() throws BrutException, IOException {
-        compareResFolder("drawable-xxxhdpi");
+    public void drawableXxhdpiTest() throws BrutException {
+        compareBinaryFolder("res/drawable-xxhdpi");
     }
 
     @Test
-    public void resRawTest() throws BrutException, IOException {
-        compareResFolder("raw");
+    public void drawableQualifierXxhdpiTest() throws BrutException {
+        compareBinaryFolder("res/drawable-xxhdpi-v4");
     }
 
     @Test
-    public void libsTest() throws BrutException, IOException {
-        compareLibsFolder("libs");
-        compareLibsFolder("lib");
+    public void drawableXxxhdpiTest() throws BrutException {
+        compareBinaryFolder("res/drawable-xxxhdpi");
+    }
+
+    @Test
+    public void resRawTest() throws BrutException {
+        compareBinaryFolder("res/raw");
+    }
+
+    @Test
+    public void libsTest() throws BrutException {
+        compareBinaryFolder("lib");
     }
 
     @Test
     public void unknownFolderTest() throws BrutException {
-        compareUnknownFiles();
+        compareBinaryFolder("unknown");
     }
 
     @Test
-    public void fileAssetTest() throws BrutException, IOException {
-        compareAssetsFolder("txt");
+    public void fileAssetTest() throws BrutException {
+        compareBinaryFolder("assets/txt");
     }
 
     @Test
-    public void unicodeAssetTest() throws BrutException, IOException {
-        assumeTrue(! OSDetection.isWindows());
-        compareAssetsFolder("unicode-txt");
+    public void unicodeAssetTest() throws BrutException {
+        assumeTrue(!OSDetection.isWindows());
+        compareBinaryFolder("assets/unicode-txt");
     }
 
     @Test
-    public void multipleDexTest() throws BrutException, IOException {
-        compareBinaryFolder("/smali_classes2", false);
+    public void multipleDexTest() throws BrutException {
+        compareBinaryFolder("smali_classes2");
+        compareBinaryFolder("smali_classes3");
+        assertTrue(new File(sTestOrigDir, "build/apk/classes2.dex").isFile());
+        assertTrue(new File(sTestOrigDir, "build/apk/classes3.dex").isFile());
     }
 
     @Test
-    public void singleDexTest() throws BrutException, IOException {
-        compareBinaryFolder("/smali", false);
-    }
-
-    @Test
-    public void confirmKotlinFolderPersistsTest() {
-        checkFolderExists("/kotlin");
+    public void singleDexTest() throws BrutException {
+        compareBinaryFolder("smali");
+        assertTrue(new File(sTestOrigDir, "build/apk/classes.dex").isFile());
     }
 }
